ADDED: user pages, readme.md with demo

--- a/login.html
+++ b/login.html
@@ -95,7 +95,7 @@
                     <div class="flex-grow border-t border-gray-200"></div>
                 </div>
 
-                <form action="user_home.html" class="space-y-5" x-data="{ showPassword: false }">
+                <form action="user_dasbor.html" class="space-y-5" x-data="{ showPassword: false }">
                     <div class="space-y-2">
                         <label class="text-xs font-black uppercase text-gray-500 tracking-wider">Email atau No.
                             HP</label>
