--- a/user_dasbor.html
+++ b/user_dasbor.html
@@ -158,7 +158,7 @@
                     </div>
                 </div>
 
-                <a href="profil.html"
+                <a href="user_profil.html"
                     class="mt-5 flex items-center justify-center gap-2 w-full py-2 bg-white border border-sky-blue text-sky-blue text-[10px] font-black uppercase rounded-lg hover:bg-sky-blue hover:text-white transition shadow-sm">
                     <i class="fas fa-user-circle"></i> Lihat Profil
                 </a>
@@ -169,26 +169,26 @@
                     class="h-10 w-10 rounded-full border-2 border-sky-blue">
             </div>
 
-            <nav class="flex-1 mt-4 px-3 space-y-2 overflow-y-auto">
-                <a href="dasbor.html"
-                    class="flex items-center gap-4 px-4 py-3 rounded-xl font-bold sidebar-active transition text-white">
-                    <i class="fas fa-th-large text-lg min-w-[20px]"></i>
-                    <span x-show="sidebarOpen" class="whitespace-nowrap">Dasbor</span>
+            <nav class="flex-1 mt-4 px-3 space-y-1">
+                <a href="user_dasbor.html"
+                    class="flex items-center gap-4 px-4 py-3 rounded-xl bg-sky-blue text-white font-bold shadow-md shadow-sky-blue/20">
+                    <i class="fas fa-th-large min-w-[20px]"></i>
+                    <span x-show="sidebarOpen">Dasbor</span>
                 </a>
-                <a href="biodata.html"
-                    class="flex items-center gap-4 px-4 py-3 rounded-xl font-bold text-gray-500 hover:bg-sky-50 transition">
-                    <i class="fas fa-user-edit text-lg min-w-[20px]"></i>
-                    <span x-show="sidebarOpen" class="whitespace-nowrap">Biodata</span>
+                <a href="user_biodata.html"
+                    class="flex items-center gap-4 px-4 py-3 rounded-xl text-gray-500 hover:bg-sky-50 font-bold transition">
+                    <i class="fas fa-user-edit min-w-[20px]"></i>
+                    <span x-show="sidebarOpen">Biodata</span>
                 </a>
-                <a href="berkas.html"
-                    class="flex items-center gap-4 px-4 py-3 rounded-xl font-bold text-gray-500 hover:bg-sky-50 transition">
-                    <i class="fas fa-file-invoice text-lg min-w-[20px]"></i>
-                    <span x-show="sidebarOpen" class="whitespace-nowrap">Kelengkapan Berkas</span>
+                <a href="user_berkas.html"
+                    class="flex items-center gap-4 px-4 py-3 rounded-xl text-gray-500 hover:bg-sky-50 font-bold transition">
+                    <i class="fas fa-file-upload min-w-[20px]"></i>
+                    <span x-show="sidebarOpen">Berkas</span>
                 </a>
-                <a href="beasiswa.html"
-                    class="flex items-center gap-4 px-4 py-3 rounded-xl font-bold text-gray-500 hover:bg-sky-50 transition">
-                    <i class="fas fa-history text-lg min-w-[20px]"></i>
-                    <span x-show="sidebarOpen" class="whitespace-nowrap">Riwayat Beasiswa</span>
+                <a href="user_beasiswa.html"
+                    class="flex items-center gap-4 px-4 py-3 rounded-xl text-gray-500 hover:bg-sky-50 font-bold transition">
+                    <i class="fas fa-history min-w-[20px]"></i>
+                    <span x-show="sidebarOpen">Riwayat</span>
                 </a>
             </nav>
         </aside>
@@ -243,35 +243,28 @@
     </div>
 
     <nav
-        class="md:hidden fixed bottom-0 left-0 w-full bg-white border-t border-gray-100 z-50 px-4 h-16 flex items-center justify-between">
-        <div class="flex gap-8">
-            <a href="dasbor.html" class="flex flex-col items-center text-sky-blue">
-                <i class="fas fa-th-large text-xl"></i>
-                <span class="text-[9px] font-bold uppercase mt-1">Home</span>
-            </a>
-            <a href="biodata.html" class="flex flex-col items-center text-gray-400">
-                <i class="fas fa-user-edit text-xl"></i>
-                <span class="text-[9px] font-bold uppercase mt-1">Data</span>
-            </a>
-        </div>
-
-        <div class="absolute left-1/2 -translate-x-1/2 -top-6">
-            <a href="profil.html" class="block p-1 bg-white rounded-full shadow-lg border border-gray-50">
-                <img src="https://placehold.co/100/EEE/31343C?text=YP" alt="Profile"
-                    class="h-14 w-14 rounded-full border-2 border-sky-blue object-cover">
-            </a>
-        </div>
-
-        <div class="flex gap-8">
-            <a href="berkas.html" class="flex flex-col items-center text-gray-400">
-                <i class="fas fa-file-invoice text-xl"></i>
-                <span class="text-[9px] font-bold uppercase mt-1">Berkas</span>
-            </a>
-            <a href="index.html" class="flex flex-col items-center text-jayapura-red">
-                <i class="fas fa-power-off text-xl"></i>
-                <span class="text-[9px] font-bold uppercase mt-1">Logout</span>
-            </a>
-        </div>
+        class="md:hidden fixed bottom-0 left-0 right-0 bg-white shadow-[0_-5px_20px_rgba(0,0,0,0.05)] border-t border-gray-100 z-50 flex justify-around items-center px-2 py-3">
+        <a href="user_dasbor.html"
+            class="flex flex-col items-center text-sky-blue font-black border-t-2 border-sky-blue pt-1">
+            <i class="fas fa-th-large text-lg"></i>
+            <span class="text-[9px] mt-1 uppercase">Dasbor</span>
+        </a>
+        <a href="biodata.html" class="flex flex-col items-center text-gray-400">
+            <i class="fas fa-user-edit text-lg"></i>
+            <span class="text-[9px] mt-1 uppercase tracking-tighter">Biodata</span>
+        </a>
+        <a href="berkas.html" class="flex flex-col items-center text-gray-400">
+            <i class="fas fa-file-upload text-lg"></i>
+            <span class="text-[9px] mt-1 uppercase tracking-tighter">Berkas</span>
+        </a>
+        <a href="beasiswa.html" class="flex flex-col items-center text-gray-400">
+            <i class="fas fa-history text-lg"></i>
+            <span class="text-[9px] mt-1 uppercase tracking-tighter">Riwayat</span>
+        </a>
+        <a href="index.html" class="flex flex-col items-center text-jayapura-red opacity-60">
+            <i class="fas fa-power-off text-lg"></i>
+            <span class="text-[9px] mt-1 uppercase tracking-tighter">Keluar</span>
+        </a>
     </nav>
 
     <footer class="bg-white py-4 border-t border-gray-100 mt-auto hidden md:block">
