--- a/user_biodata.html
+++ b/user_biodata.html
@@ -158,7 +158,7 @@
             </nav>
         </aside>
 
-        <main class="flex-1 p-4 md:p-8">
+        <main class="flex-1 p-4 md:p-8" x-data="{ activeTab: 'pribadi' }">
             <div
                 class="flex items-center gap-2 text-[10px] md:text-xs text-gray-400 mb-6 font-bold uppercase tracking-widest">
                 <i class="fas fa-home"></i> <span>/</span> <span>Dasbor</span> <span>/</span> <span
@@ -168,20 +168,20 @@
             <div class="grid grid-cols-1 lg:grid-cols-4 gap-8">
                 <div class="lg:col-span-1 space-y-3">
                     <button @click="activeTab = 'pribadi'"
-                        :class="activeTab === 'pribadi' ? 'bg-sky-blue text-white shadow-lg' : 'bg-white text-gray-400 hover:bg-gray-50'"
+                        :class="activeTab === 'pribadi' ? 'bg-sky-blue text-white shadow-lg shadow-sky-blue/20' : 'bg-white text-gray-400 hover:bg-gray-50'"
                         class="w-full flex items-center justify-between px-5 py-4 rounded-2xl font-black text-[10px] uppercase tracking-widest transition-all">
                         <span class="flex items-center gap-3"><i class="fas fa-user text-sm"></i> Data Pribadi</span>
                         <i x-show="activeTab === 'pribadi'" class="fas fa-chevron-right text-[8px]"></i>
                     </button>
                     <button @click="activeTab = 'akademik'"
-                        :class="activeTab === 'akademik' ? 'bg-sky-blue text-white shadow-lg' : 'bg-white text-gray-400 hover:bg-gray-50'"
+                        :class="activeTab === 'akademik' ? 'bg-sky-blue text-white shadow-lg shadow-sky-blue/20' : 'bg-white text-gray-400 hover:bg-gray-50'"
                         class="w-full flex items-center justify-between px-5 py-4 rounded-2xl font-black text-[10px] uppercase tracking-widest transition-all">
                         <span class="flex items-center gap-3"><i class="fas fa-graduation-cap text-sm"></i>
                             Akademik</span>
                         <i x-show="activeTab === 'akademik'" class="fas fa-chevron-right text-[8px]"></i>
                     </button>
                     <button @click="activeTab = 'keluarga'"
-                        :class="activeTab === 'keluarga' ? 'bg-sky-blue text-white shadow-lg' : 'bg-white text-gray-400 hover:bg-gray-50'"
+                        :class="activeTab === 'keluarga' ? 'bg-sky-blue text-white shadow-lg shadow-sky-blue/20' : 'bg-white text-gray-400 hover:bg-gray-50'"
                         class="w-full flex items-center justify-between px-5 py-4 rounded-2xl font-black text-[10px] uppercase tracking-widest transition-all">
                         <span class="flex items-center gap-3"><i class="fas fa-users text-sm"></i> Data Keluarga</span>
                         <i x-show="activeTab === 'keluarga'" class="fas fa-chevron-right text-[8px]"></i>
@@ -197,7 +197,7 @@
                                 <h3 class="text-xl font-black mb-6 flex items-center gap-3">
                                     <span
                                         class="w-8 h-8 bg-sky-blue/10 text-sky-blue rounded-lg flex items-center justify-center text-sm">01</span>
-                                    Informasi Pribadi
+                                    Informasi Pribadi & Alamat
                                 </h3>
                                 <form class="space-y-6">
                                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -217,8 +217,6 @@
                                                 class="w-full px-5 py-3.5 rounded-2xl bg-gray-50 border border-gray-100 focus:border-sky-blue focus:ring-4 focus:ring-sky-blue/10 outline-none transition font-bold text-sm"
                                                 placeholder="9103...">
                                         </div>
-                                    </div>
-                                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                                         <div class="space-y-2">
                                             <label
                                                 class="text-[10px] font-black uppercase text-gray-400 tracking-tighter">Tempat
@@ -234,6 +232,44 @@
                                                 class="w-full px-5 py-3.5 rounded-2xl bg-gray-50 border border-gray-100 focus:border-sky-blue focus:ring-4 focus:ring-sky-blue/10 outline-none transition font-bold text-sm">
                                         </div>
                                     </div>
+
+                                    <div class="space-y-2 pt-4">
+                                        <label
+                                            class="text-[10px] font-black uppercase text-gray-400 tracking-tighter">Alamat
+                                            Lengkap di Jayapura</label>
+                                        <textarea rows="3"
+                                            class="w-full px-5 py-3.5 rounded-2xl bg-gray-50 border border-gray-100 focus:border-sky-blue focus:ring-4 focus:ring-sky-blue/10 outline-none transition font-bold text-sm"
+                                            placeholder="Nama Jalan, No. Rumah, RT/RW..."></textarea>
+                                    </div>
+
+                                    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                                        <div class="space-y-2">
+                                            <label
+                                                class="text-[10px] font-black uppercase text-gray-400 tracking-tighter">Distrik</label>
+                                            <select
+                                                class="w-full px-5 py-3.5 rounded-2xl bg-gray-50 border border-gray-100 focus:border-sky-blue focus:ring-4 focus:ring-sky-blue/10 outline-none transition font-bold text-sm">
+                                                <option>Sentani</option>
+                                                <option>Waibu</option>
+                                                <option>Nimboran</option>
+                                            </select>
+                                        </div>
+                                        <div class="space-y-2">
+                                            <label
+                                                class="text-[10px] font-black uppercase text-gray-400 tracking-tighter">Jenis
+                                                Kelamin</label>
+                                            <div class="flex gap-4 pt-2">
+                                                <label
+                                                    class="flex items-center gap-2 font-bold text-sm text-gray-600"><input
+                                                        type="radio" name="jk"
+                                                        class="text-sky-blue focus:ring-sky-blue"> Laki-laki</label>
+                                                <label
+                                                    class="flex items-center gap-2 font-bold text-sm text-gray-600"><input
+                                                        type="radio" name="jk"
+                                                        class="text-sky-blue focus:ring-sky-blue"> Perempuan</label>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                     <div class="pt-6">
                                         <button @click="activeTab = 'akademik'" type="button"
                                             class="w-full md:w-auto bg-sky-blue text-white px-10 py-4 rounded-2xl font-black uppercase text-xs tracking-widest shadow-lg shadow-sky-blue/30 hover:scale-[1.02] transition-all">
@@ -248,23 +284,49 @@
                                 <h3 class="text-xl font-black mb-6 flex items-center gap-3">
                                     <span
                                         class="w-8 h-8 bg-sky-blue/10 text-sky-blue rounded-lg flex items-center justify-center text-sm">02</span>
-                                    Data Pendidikan
+                                    Data Pendidikan & Akademik
                                 </h3>
                                 <form class="space-y-6">
-                                    <div class="space-y-2">
-                                        <label
-                                            class="text-[10px] font-black uppercase text-gray-400 tracking-tighter">Nama
-                                            Universitas / Sekolah</label>
-                                        <input type="text"
-                                            class="w-full px-5 py-3.5 rounded-2xl bg-gray-50 border border-gray-100 focus:border-sky-blue focus:ring-4 focus:ring-sky-blue/10 outline-none transition font-bold text-sm">
-                                    </div>
                                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                                        <div class="space-y-2">
+                                            <label
+                                                class="text-[10px] font-black uppercase text-gray-400 tracking-tighter">Jenjang
+                                                Pendidikan</label>
+                                            <select
+                                                class="w-full px-5 py-3.5 rounded-2xl bg-gray-50 border border-gray-100 focus:border-sky-blue focus:ring-4 focus:ring-sky-blue/10 outline-none transition font-bold text-sm">
+                                                <option>Diploma (D3)</option>
+                                                <option selected>Sarjana (S1)</option>
+                                                <option>Magister (S2)</option>
+                                            </select>
+                                        </div>
+                                        <div class="space-y-2">
+                                            <label
+                                                class="text-[10px] font-black uppercase text-gray-400 tracking-tighter">Nama
+                                                Universitas / Instansi</label>
+                                            <input type="text"
+                                                class="w-full px-5 py-3.5 rounded-2xl bg-gray-50 border border-gray-100 focus:border-sky-blue focus:ring-4 focus:ring-sky-blue/10 outline-none transition font-bold text-sm"
+                                                placeholder="Contoh: Universitas Cenderawasih">
+                                        </div>
+                                        <div class="space-y-2">
+                                            <label
+                                                class="text-[10px] font-black uppercase text-gray-400 tracking-tighter">Fakultas</label>
+                                            <input type="text"
+                                                class="w-full px-5 py-3.5 rounded-2xl bg-gray-50 border border-gray-100 focus:border-sky-blue focus:ring-4 focus:ring-sky-blue/10 outline-none transition font-bold text-sm">
+                                        </div>
                                         <div class="space-y-2">
                                             <label
                                                 class="text-[10px] font-black uppercase text-gray-400 tracking-tighter">Jurusan
                                                 / Program Studi</label>
                                             <input type="text"
                                                 class="w-full px-5 py-3.5 rounded-2xl bg-gray-50 border border-gray-100 focus:border-sky-blue focus:ring-4 focus:ring-sky-blue/10 outline-none transition font-bold text-sm">
+                                        </div>
+                                        <div class="space-y-2">
+                                            <label
+                                                class="text-[10px] font-black uppercase text-gray-400 tracking-tighter">Semester
+                                                Saat Ini</label>
+                                            <input type="number"
+                                                class="w-full px-5 py-3.5 rounded-2xl bg-gray-50 border border-gray-100 focus:border-sky-blue focus:ring-4 focus:ring-sky-blue/10 outline-none transition font-bold text-sm"
+                                                placeholder="Contoh: 5">
                                         </div>
                                         <div class="space-y-2">
                                             <label
@@ -284,12 +346,53 @@
                                 </form>
                             </div>
 
-                            <div x-show="activeTab === 'keluarga'" x-cloak>
-                                <h3 class="text-xl font-black mb-6">Data Orang Tua / Wali</h3>
-                                <p class="text-sm text-gray-500 mb-6">Silakan lengkapi data wali pendaftar.</p>
-                                <button @click="activeTab = 'akademik'"
-                                    class="text-sky-blue font-bold text-xs uppercase"><i
-                                        class="fas fa-arrow-left mr-2"></i> Kembali</button>
+                            <div x-show="activeTab === 'keluarga'" x-transition:enter="transition ease-out duration-300"
+                                x-transition:enter-start="opacity-0 translate-y-4">
+                                <h3 class="text-xl font-black mb-6 flex items-center gap-3">
+                                    <span
+                                        class="w-8 h-8 bg-sky-blue/10 text-sky-blue rounded-lg flex items-center justify-center text-sm">03</span>
+                                    Data Orang Tua / Wali
+                                </h3>
+                                <form class="space-y-6">
+                                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                                        <div class="space-y-2">
+                                            <label
+                                                class="text-[10px] font-black uppercase text-gray-400 tracking-tighter">Nama
+                                                Ayah Kandung</label>
+                                            <input type="text"
+                                                class="w-full px-5 py-3.5 rounded-2xl bg-gray-50 border border-gray-100 focus:border-sky-blue focus:ring-4 focus:ring-sky-blue/10 outline-none transition font-bold text-sm">
+                                        </div>
+                                        <div class="space-y-2">
+                                            <label
+                                                class="text-[10px] font-black uppercase text-gray-400 tracking-tighter">Nama
+                                                Ibu Kandung</label>
+                                            <input type="text"
+                                                class="w-full px-5 py-3.5 rounded-2xl bg-gray-50 border border-gray-100 focus:border-sky-blue focus:ring-4 focus:ring-sky-blue/10 outline-none transition font-bold text-sm">
+                                        </div>
+                                        <div class="space-y-2">
+                                            <label
+                                                class="text-[10px] font-black uppercase text-gray-400 tracking-tighter">Pekerjaan
+                                                Orang Tua</label>
+                                            <input type="text"
+                                                class="w-full px-5 py-3.5 rounded-2xl bg-gray-50 border border-gray-100 focus:border-sky-blue focus:ring-4 focus:ring-sky-blue/10 outline-none transition font-bold text-sm">
+                                        </div>
+                                        <div class="space-y-2">
+                                            <label
+                                                class="text-[10px] font-black uppercase text-gray-400 tracking-tighter">Nomor
+                                                HP Orang Tua / Wali</label>
+                                            <input type="text"
+                                                class="w-full px-5 py-3.5 rounded-2xl bg-gray-50 border border-gray-100 focus:border-sky-blue focus:ring-4 focus:ring-sky-blue/10 outline-none transition font-bold text-sm"
+                                                placeholder="08...">
+                                        </div>
+                                    </div>
+                                    <div class="pt-6 flex flex-col md:flex-row gap-4">
+                                        <button @click="activeTab = 'akademik'" type="button"
+                                            class="order-2 md:order-1 border border-gray-200 text-gray-400 px-10 py-4 rounded-2xl font-black uppercase text-xs tracking-widest hover:bg-gray-50 transition">Kembali</button>
+                                        <button type="submit"
+                                            class="order-1 md:order-2 flex-1 md:flex-none bg-green-500 text-white px-10 py-4 rounded-2xl font-black uppercase text-xs tracking-widest shadow-lg shadow-green-500/30 hover:scale-[1.02] transition">Simpan
+                                            Semua Data <i class="fas fa-save ml-2"></i></button>
+                                    </div>
+                                </form>
                             </div>
 
                         </div>
