--- a/user_dasbor.html
+++ b/user_dasbor.html
@@ -378,8 +378,9 @@
         </a>
     </nav>
 
-    <footer class="bg-white py-4 border-t border-gray-100 mt-auto hidden md:block">
-        <div class="px-8 flex justify-between items-center text-[10px] font-bold text-gray-400 uppercase">
+    <footer class="bg-white py-6 border-t border-gray-100 mt-auto hidden md:block">
+        <div
+            class="px-8 flex justify-between items-center text-[10px] font-bold text-gray-400 uppercase tracking-[2px]">
             <p>&copy; 2026 SIM Beasiswa Kabupaten Jayapura</p>
             <p>Powered by Nokensoft.com</p>
         </div>
